tabela com agentes

--- a/paginas/agentes.html
+++ b/paginas/agentes.html
@@ -10,22 +10,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./javascript/agente.js"></script>
 </head>
-<body onload="exibirUsuario()">
-        <div id="fotoUsuario" class="col-4">
-        </div>
-        <div id="perfil" class="col-8">
-        </div>
-        <br><br>
-        <div class="dropdown show">
-          <a class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Selecione um parceiro...
-          </a>
-        
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <c:forEach var="agenteParceiro" items="${allObjectsMap}" >
-              <a class="dropdown-item" href="${agenteParceiro.id}">"{agenteFinanceiro.nome_agente}"</a>
-          </c:foreach>
-          </div>
-        </div>
+<body onload="incializaPagina()">
+  <div id="fotoUsuario" class="col-4">
+  </div>
+  <div id="perfil" class="col-8">
+  </div>
+  <br><br>
+  <div id="tabelaParceiros">
+  </div>
 </body>
 </html>
