--- a/paginas/agentes.html
+++ b/paginas/agentes.html
@@ -11,12 +11,18 @@
     <script type="text/javascript" src="./javascript/agente.js"></script>
 </head>
 <body onload="incializaPagina()">
-  <div id="fotoUsuario" class="col-4">
+  <div class="row" style="margin-left: 1%;">
+    <div id="fotoUsuario" class="col-4"></div>
+    <div id="perfil" class="col-8"></div>
+    <br><br>
   </div>
-  <div id="perfil" class="col-8">
+  <div class="dropdown" style="margin-left: 1%;">
+    <h3>Selecione o Parceiro</h3>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Parceiro
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownParceiros"></div>
   </div>
-  <br><br>
-  <div id="tabelaParceiros">
-  </div>
+  <div id="tabelaParceiros"></div>
 </body>
 </html>
