--- a/paginas/agentes.html
+++ b/paginas/agentes.html
@@ -16,7 +16,7 @@
     <div id="fotoUsuario" style="margin-left: 1%; margin-right: 2%;"></div>
     <div id="perfil" style="margin-right: 70%;"></div>
     <div class="form-group">
-      <button type="button" class="btn btn-primary btn-block" onclick="logout()"> LogOut  </button>
+      <button type="button" class="btn btn-danger btn-block" onclick="logout()"> LogOut  </button>
     </div> <!-- form-group// --> 
   </div>
   <div class="dropdown" style="margin-left: 1%;">
