--- a/paginas/dashboard.html
+++ b/paginas/dashboard.html
@@ -11,17 +11,18 @@
     <script type="text/javascript" src="./javascript/dash.js"></script>
     <script type="text/javascript" src="./javascript/logout.js"></script>
 </head>
-<body onload="complete()">
+<header style="margin-top: 1%;">
   <div class="row" style="margin-left: 2%;margin-top: 1%;">
     <div class="form-group">
       <button type="button" class="btn btn-primary btn-block" onclick="voltar()"> Voltar  </button>
     </div> <!-- form-group// -->  
-    <div class="form-group" style="margin-left: 75%;">
+    <div class="form-group" style="margin-left: 1%;">
       <button type="button" class="btn btn-danger btn-block" onclick="logout()"> LogOut  </button>
     </div>
     </div>
-
-    <div class="row" style="justify-content: center; margin-top: 10%;">
+</header>
+<body onload="complete()">
+  <div class="row" style="justify-content: center; margin-top: 10%;">
       <div class="card" >
           <article class="card-body">
             <form>
